# Tracer

./: .gitignore  CMakeLists.txt  README.md
images/: test_BVH.ppm  test_OBJloadeAndRenderer.ppm  test_trace.ppm
images/test/: test_BVH.ppm  test_output.ppm  test_sphere.ppm  test_triangle.ppm
include/stat_render/accelerators/: BVH.h  Bound.h
include/stat_render/acclerators/: BVH.h  Bound.h
include/stat_render/core/: Camera.h  Film.h  Hit.h  Ray.h  Vector.h  common.h  transform.h
include/stat_render/lights/: AreaLights.h  Light.h
include/stat_render/materials/: Diffuse.h  Emissive.h  Material.h  Microfacet.h
include/stat_render/renderers/: Renderer.h
include/stat_render/samplers/: sampler.h  sobolMatrix.h
include/stat_render/scenes/: Scene.h  parser.h
include/stat_render/shapes/: Mesh.h  Object.h  Sphere.h  Triangle.h
include/stat_render/textures/: Texture.h
src/: main.cpp
src/accelerators/: BVH.cpp  Bound.cpp
src/core/: Film.cpp  transform.cpp
src/materials/: Diffuse.cpp  Microfacet.cpp
src/renderers/: Renderer.cpp
src/scenes/: Scene.cpp  parser.cpp
src/shapes/: Mesh.cpp  Sphere.cpp  Triangle.cpp
